--- a/relationships/pom.xml
+++ b/relationships/pom.xml
@@ -58,6 +58,10 @@
                 <groupId>javax.servlet</groupId>
                 <artifactId>jstl</artifactId>
         </dependency>
+        <dependency>
+        	<groupId>org.springframework.boot</groupId>
+       		<artifactId>spring-boot-starter-validation</artifactId>
+    	</dependency>
 	</dependencies>
 
 	<build>
